🍛feat: adjustment in filters by query
